test/Fail/GeneralizeRHS.err
GeneralizeRHS.agda:6.5-6: error: [GeneralizeNotSupportedHere]
Generalizable variable GeneralizeRHS.X is not supported here
when scope checking X
